# 5G00EV25-3001_client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dad
.github/: dependabot.yml
.github/workflows/: cargo_build.yml  cargo_lint.yml  cargo_test.yml  rust-clippy.yml  security_audit.yml
docs/: index.md
src/: app.rs  configure_app.rs  lib.rs  main.rs
src/components/: chatroom.rs  login_page.rs  loginpage.rs  mod.rs  rooms.rs  side_pane.rs  window_frame.rs
src/structs/: app.rs  http_client.rs  loginpage.rs  message.rs  mod.rs  room.rs  rooms.rs  user.rs
src/tests/: integration_tests.rs
