[package]
name = "client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "wasmbind"] }
eframe = { version = "0.22.0", features = ["persistence"] }
egui = "0.22.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
regex = "1.9.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
#winit = "0.27.4"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
