[package]
name = "client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.42", default-features = false, features = ["clock", "std", "wasmbind"] }
eframe = { version = "^0.31.1", features = ["persistence"] }
egui = "^0.32.3"
reqwest = { version = "^0.13.1", features = ["json", "blocking"] }
regex = "^1.12.2"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1.49.0", features = ["full"] }
#winit = "0.27.4"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
